SERVER-13975 At startup, clean up orphan idxs on "system" collection